--- a/neo-cli-linux-x64/Plugins/RpcServer/config.json
+++ b/neo-cli-linux-x64/Plugins/RpcServer/config.json
@@ -1,15 +1,20 @@
 {
   "PluginConfiguration": {
-    "BindAddress": "127.0.0.1",
-    "Port": 30332,
-    "SslCert": "",
-    "SslCertPassword": "",
-    "TrustedAuthorities": [],
-    "RpcUser": "",
-    "RpcPass": "",
-    "MaxGasInvoke": 20,
-    "MaxFee": 0.1,
-    "MaxConcurrentConnections": 40,
-    "DisabledMethods": [ ]
+    "Servers": [
+      {
+        "Network": 827601742,
+        "BindAddress": "127.0.0.1",
+        "Port": 30332,
+        "SslCert": "",
+        "SslCertPassword": "",
+        "TrustedAuthorities": [],
+        "RpcUser": "",
+        "RpcPass": "",
+        "MaxGasInvoke": 20,
+        "MaxFee": 0.1,
+        "MaxConcurrentConnections": 40,
+        "DisabledMethods": [ ]
+      }
+    ]
   }
 }
