--- a/neo-cli-linux-x64/config.json
+++ b/neo-cli-linux-x64/config.json
@@ -21,7 +21,7 @@
     "PluginURL": "https://github.com/neo-project/neo-modules/releases/download/v{1}/{0}.zip"
   },
   "ProtocolConfiguration": {
-    "Magic": 827601742,
+    "Network": 844378958,
     "MillisecondsPerBlock": 15000,
     "MaxTraceableBlocks": 2102400,
     "ValidatorsCount": 7,
