--- a/neo-cli-linux-x64/Plugins/RpcServer/config.json
+++ b/neo-cli-linux-x64/Plugins/RpcServer/config.json
@@ -2,7 +2,7 @@
   "PluginConfiguration": {
     "Servers": [
       {
-        "Network": 827601742,
+        "Network": 844378958,
         "BindAddress": "127.0.0.1",
         "Port": 30332,
         "SslCert": "",
@@ -13,6 +13,7 @@
         "MaxGasInvoke": 20,
         "MaxFee": 0.1,
         "MaxConcurrentConnections": 40,
+        "MaxIteratorResultItems": 100,
         "DisabledMethods": [ ]
       }
     ]
